<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shata.inventoryapplication.DetailActivity">

    <ImageView
        android:id="@+id/image_of_the_product"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/name_of_the_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/name_of_the_product"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/quantity"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantity_of_the_product"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:text="23"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />

        <Button
            android:id="@+id/remove_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/price"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_of_the_product"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:text="23"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_from_the_supplier" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />


</LinearLayout>