<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_of_the_product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:text="@string/name_of_the_product"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/quantity"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_of_the_product"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="23"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/price"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_of_the_product"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="23"
                android:textSize="20sp" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/button_circle"
        android:focusable="false"
        android:text="sale" />

</LinearLayout>